<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:visible="true">

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard"
            android:visible="true"
            app:showAsAction="withText"></item>
        <item
            android:id="@+id/updateprofile"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/update_profile"
            app:showAsAction="withText"></item>
        <item
            android:id="@+id/addpost"
            android:icon="@drawable/post"
            android:title="@string/add_post"
            app:showAsAction="withText"></item>
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback"
            app:showAsAction="withText"></item>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            app:showAsAction="withText"></item>
    </group>

</menu>