<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_gravity="top"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="25dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/navimage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/my_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingTop="8dp"
        android:text="@string/bikal_shrestha"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/nav_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingTop="2dp"
        android:text="@string/bikal3_bs_gmail_com"
        android:textColor="#000000" />

</LinearLayout>