<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Feedback.Feedback">
<include layout="@layout/toolbarlayout"></include>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_feedback"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textSize="36sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_fname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_feedback"
        android:layout_margin="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_feedback_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_lname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_fname"
        android:layout_margin="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_feedback_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_lname"
        android:layout_margin="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_feedback_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_feedback"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/til_email"

        android:layout_margin="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_feedback_feecback"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="end|bottom|left"
            android:hint="@string/feedback"
            android:textAlignment="viewEnd" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_feedback_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_feedback"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="Submit" />




</RelativeLayout>