<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            android:text="@string/login"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:textSize="35dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_username"
            android:layout_below="@id/tv_login"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/et_emaillogin"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/email"
                android:background="@drawable/edittextlayout"
                android:inputType="text"


                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding = "20dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/til_password"
            android:layout_below="@id/til_username"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"

                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding = "20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"

            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            style="@style/FlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/signup" />



    </RelativeLayout>

</FrameLayout>