<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.UpdateProfile"
    android:id="@+id/fragment_updateprofile"
    >




    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/et_update_imagename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_update_selectimage"
        style="@style/FlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_update_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="Select Image" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_update_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/imageboarder"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_fullname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/btn_update_selectimage">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_fullname_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:hint="@string/fullname" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_fullname"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="Username" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="15dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="25dp" />

</RelativeLayout>